# microservice-k8s-flask

./: .gitignore  4-AI-Ollama-Dapr-microk8s.drawio  LICENSE  README.md
1-microk8s/AWS/: README.md
1-microk8s/AWS/opentofu/: main.tf  my-app-argo.yaml  userdata.sh
1-microk8s/OVH/: README.md
1-microk8s/WSL2/: README.md
2-Docker/api/v1/: task-id-put.yaml
2-Docker/tasks-flask-api/: Dockerfile  README.md  app.py  appV1-semantic-versioning-example.py
3-K8s-flask-api/: README.md  mongo-svc.yml  mongo.yml  taskmaster-ikz.yml
3-K8s-task-flask-api/: README.md  flask-api-secret.yml  mongo.yml  taskmaster-ikz-secret.yml  taskmaster-ikz.yml
4-Gitlab-ArgoCD/: README.md
4-K8s-Best-practices/4.1-Swiss-Army-Knife-networking/: README.md  swiss-army-knife.yaml
4-K8s-Best-practices/Swiss-Army-Knife-networking/: README.md
5-WASM/: README.md  api-rest-calls-game.html  api-rest-calls-game.py.orig  index.html  main.py
8-BigData-AI/Ollama/: README.md  deployment.yaml  service.yaml
8-BigData-AI/crewAI/1stcrewaiproject/: README.md  pyproject.toml
8-BigData-AI/crewAI/1stcrewaiproject/src/1stcrewaiproject/: crew.py  main.py
8-BigData-AI/final/: README.md
8-BigData-AI/final/create_ollama/: README.md
8-BigData-AI/final/guess-films/: Dockerfile  guess_film_noagent.py  requirements.txt
8-BigData-AI/final/guess-wiki-questions/: Dockerfile  guess-wiki-questions.py  requirements.txt
9-Gitlab-CI-CD/: README.md
docker/: requirements.txt
k8s-flask-api/: mongo-pv.yml  mongo-pvc.yml  taskmaster-ikz-secret.yml  taskmaster-svc-ikz.yml
(+29 files in other folders)
